Media queries comoleted

--- a/band.html
+++ b/band.html
@@ -6,7 +6,7 @@
         <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Dokdo&family=Nova+Mono&family=Oswald:wght@200&family=Solway:wght@300&family=Source+Code+Pro:wght@200&family=Yeseva+One&display=swap" rel="stylesheet">
-        <link rel = "Stylesheet" href = "style.css" type = "text/css">
+        <link rel = "Stylesheet" href = "styles/style.css" type = "text/css">
     </head>
     <body>
         <nav>
@@ -105,8 +105,8 @@
                 In 2017, the band gained traction, having sold 45,000 on their first album. The band went into hiatus 2018 due to band member, Sebastian, undergoing vocal surgery but recovered and made a quick comeback for early 2020. 
                 In late 2020, the band got to perform at the prestigious stadium, Great Strahov Stadium. As of 2022, the band is estimated to have 1.64 million fans worldwide and have sold over 100 million copies of their music.</span>
         </p>
-        <div class = footerWrap>
+        <footer class = footerWrap>
             <div>@2022 THE BAJS</div>
-         </div> 
+        </footer> 
         <script src = 'script.js'></script>         
     </body>
