--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>The Bajs website</title>
         <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Dokdo&family=Sono:wght@200&display=swap" rel="stylesheet">
-        <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
+        <link rel = "Stylesheet" href = "styles/normalize.css" type = "text/css">
     </head>
     <body>  
         <nav>
@@ -70,9 +70,9 @@
                     <input type = 'submit' value = 'SUBSCRIBE'>
                 </form>        
             </div>
-            <div class = footerWrap>
+            <footer class = footerWrap>
                 <div>@2022 THE BAJS</div>
-             </div>            
+            </footer>            
         </main>
         <script src = 'script.js'></script>               
     </body> 
