--- a/shop.html
+++ b/shop.html
@@ -2,90 +2,89 @@
 <html lang = en>
     <head>
         <meta charset = 'UTF-8'>
-        <title>the Bajs merch [age</title>
+        <title>The Bajs merch page</title>
         <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
-        <link rel = "Stylesheet" href = "style.css" type = "text/css">
+        <link rel = "Stylesheet" href = "styles/style.css" type = "text/css">
     </head>
-    <body>
-        <nav>
-            <a class = "top-head" id ='logo' href="index.html">
-            THE BAJS
-            </a>
-            <h2 class = 'top-head' id ='link'>
-                <a href ="band.html">BAND</a>
-                <a href ="tour.html">TOUR</a>
-                <a href ="shop.html">SHOP</a>
-            </h2>
-            <div class = 'top-head' id ='social'>
-                <a href = 'https://www.twitch.tv/forsen'>
-                    <i class="fa-brands fa-twitch"></i>
+        <body>
+            <nav>
+                <a class = "top-head" id ='logo' href="index.html">
+                THE BAJS
                 </a>
-                <a href = 'https://twitter.com/forsen'>
-                    <i class="fa-brands fa-twitter"></i>
-                </a>
-                <a href = 'https://discord.gg/forsen'>
-                    <i class="fa-brands fa-discord"></i>
-                </a>
-            </div>
-        </nav>  
-        <grid class = 'merchDisplay'>
+                <h2 class = 'top-head' id ='link'>
+                    <a href ="band.html">BAND</a>
+                    <a href ="tour.html">TOUR</a>
+                    <a href ="shop.html">SHOP</a>
+                </h2>
+                <div class = 'top-head' id ='social'>
+                    <a href = 'https://www.twitch.tv/forsen'>
+                        <i class="fa-brands fa-twitch"></i>
+                    </a>
+                    <a href = 'https://twitter.com/forsen'>
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href = 'https://discord.gg/forsen'>
+                        <i class="fa-brands fa-discord"></i>
+                    </a>
+                </div>
+            </nav> 
+        <div class = 'merchDisplay'>
             <div class = 'merch1'>
-                <img src = 'images/poster1.png'>
+                <img src = 'images/poster1.png' alt = 'Poster image'>
                 <h2>THE BAJS POSTER</h2>
                 <P>$20.00</P>
             </div>
             <div class = 'merch2'>
-                <img src = 'images/toteBag.png'>
+                <img src = 'images/toteBag.png' alt = 'Tote bag image'>
                 <h2>BAJS TOTE BAG</h2>
                 <p>$15.00</p>
             </div>
             <div class = 'merch3'>
-                <img src = 'images/shirt1.png' class = 'shirtFront'>
-                <img src = 'images/shirt1back.png' class = 'shirtBack'>
+                <img src = 'images/shirt1.png' class = 'shirtFront' alt = 'Classic shirt image, front'>
+                <img src = 'images/shirt1back.png' class = 'shirtBack' alt = 'Classic shirt image, back'>
                 <h2>CLASSIC THE BAJS SHIRT</h2>
                 <p>$30.00</p>
             </div>
             <div class = 'merch4'>
-                <img src = 'images/cap.png'>
+                <img src = 'images/cap.png' alt = 'Cap image'>
                 <h2>SPRAY ON HAT</h2>
                 <p>$25.00</p>
             </div>
             <div class = 'merch5'>
-                <img src = 'images/shirt2.png'>
+                <img src = 'images/shirt2.png' alt = 'Tie dye shirt image'>
                 <h2>RUN IT DOWN TIE DYE</h2>
                 <p>$30.00</p>
             </div>
             <div class = 'merch6'>
-                <img src = 'images/album1.png'>
+                <img src = 'images/album1.png' alt = 'First vinyl image'>
                 <h2>RUN IT DOWN VINYL</h2>
                 <p>$25.00</p>
             </div>
             <div class = 'merch7'>
-                <img src = 'images/album2.png'>
+                <img src = 'images/album2.png' alt = 'Second vinyl image'>
                 <h2>FUSEFIRE VINYL</h2>
                 <p>$40.00   </p>
             </div>
             <div class = 'merch8'>
-                <img src = 'images/hoodieFront.png'>
+                <img src = 'images/hoodieFront.png' alt = 'Hoodie image'>
                 <h2>THE BAJS HOODIE</h2>
                 <p>$30.00</p>
             </div>
             <div class = 'merch9'>
-                <img src = 'images/longShirt.png'>
+                <img src = 'images/longShirt.png' alt = 'Long sleeve shirt image'>
                 <h2>WORLD TOUR LONG SLEEVE SHIRT</h2>
                 <p>$30.00</p>
-            </div>
-            
-        </grid>         
-        <button onclick = 'scrollFunction()' id = 'buttonTop'> Back to top</button>
-        <div class = footerWrap>
+            </div>        
+        </div>
+         <button onclick = 'scrollFunction()' id = 'buttonTop'> Back to top</button>
+        <footer class = footerWrap>
             <div>@2022 THE BAJS</div>
-        </div> 
+        </footer>  
         <script>
             function scrollFunction() {
                 document.body.scrollTop = 0;
                 document.documentElement.scrollTop = 0;
             }
-        </script>
-    </body>
+        </script>               
+        </body>
