--- a/tour.html
+++ b/tour.html
@@ -5,7 +5,7 @@
         <title>The Bajs tour page</title>
         <script src="https://kit.fontawesome.com/377d809d75.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Dokdo&family=Sono:wght@200&display=swap" rel="stylesheet">
-        <link rel = "Stylesheet" href = "normalize.css" type = "text/css">
+        <link rel = "Stylesheet" href = "styles/normalize.css" type = "text/css">
     </head>
     <body>
         <nav>
@@ -63,7 +63,7 @@
                 </div>        
                 <div class = 'tourRow'>
                     <div class = 'date'>19 JUN 2023</div>
-                    <div class = 'country'>COPEHAGEN,DK</div>
+                    <div class = 'country'>COPENHAGEN,DK</div>
                     <div class = 'venue'>PARKEN STADIUM</div>
                     <div class = 'ticket'>TICKETS</div>
                 </div> 
@@ -93,8 +93,8 @@
                 </div>
             </div>
         </main>
-        <div class = footerWrap>
+        <footer class = footerWrap>
             <div>@2022 THE BAJS</div>
-         </div> 
+        </footer> 
         <script src = 'script.js'></script>         
     </body>
